# agent-memory-rag

./: .dockerignore  .gitignore  AGENTS.md  IDEAS.md  README.md
.azure/: deployment-plan.md
.github/skills/architecture-diagram/: SKILL.md
.github/skills/frontend-design/: SKILL.md
.github/skills/idea-capture/: SKILL.md
.github/skills/microsoft-pixel-deck/: SKILL.md
agent_contracts/: __init__.py  customer_support.txt  directive_rag.txt  foundry_prompt.txt  models.py  orders.py  prompts.py  pyproject.toml  tools.py
agents/: directive-rag-maf.Dockerfile
agents/customer-support-maf/: azure.yaml
agents/customer-support-maf/src/customer-support-maf/: Dockerfile  agent.yaml  gateway_tools.py  main.py  requirements.txt
agents/customer-support-maf/tests/: test_main.py
agents/directive-rag-maf/: azure.yaml
agents/directive-rag-maf/deployment/directive-rag-maf-hosted/: agent.yaml
agents/directive-rag-maf/src/directive-rag-maf/: gateway_tools.py  main.py  requirements.txt
agents/directive-rag-maf/tests/: test_dependencies.py  test_main.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  agent_runner.py  agent_tools.py  auth.py  azure_clients.py  classic_rag_client.py  config.py  conversation_history.py  conversation_memory.py  memory_agent.py  profile_agent.py  pyproject.toml  server.py  session_manager.py  user_profile_memory.py
backend/agent_memory_backend/: __init__.py  agent_mcp.py  agent_runtime_contracts.py  agent_tool_gateway.py  agent_tools.py  agui_adapter.py  auth.py  azure_clients.py  backend_services.py  chat_service.py  config.py  conversation_coordinator.py  conversation_history.py  conversation_memory.py  conversation_registry.py  cosmos_container.py  directive_artifacts.py  directive_catalog.py  directive_errors.py  directive_mandates.py  directive_search.py  directive_tools.py  foundry_hosted_maf_runtime.py  foundry_iq_health.py  foundry_prompt_runtime.py  foundry_runtime_base.py  health.py  memory_agent.py  mock_agent_runtime.py  profile_agent.py  server.py  telemetry.py  turn_accumulator.py  user_profile_memory.py
backend/agent_memory_backend/prompts/: __init__.py  profile_extraction.txt
backend/prompts/: conversation_memory.j2  customer_support.j2  profile_update.j2  user_profile.j2
backend/tests/: test_config.py  test_conversation_memory.py  test_directive_phase1.py  test_directive_streaming.py  test_directive_tools.py  test_dual_agents.py  test_hardening.py  test_server_health.py  test_user_access.py
directive_contracts/: pyproject.toml
directive_contracts/directive_contracts/: __init__.py  models.py
docs/: IMPLEMENTATION-PLAN.md  PRD-Solution-Challenges-1-5.md  TEMP-plan-directives-from-blob.md  TEMP-plan-maf-hosted-agent-consolidation.md  architecture.html  i-want-to-tailor-my-rag-scenario-to-some.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf.template  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: config.js
frontend/src/: agent-presentation.test.ts  agent-presentation.ts  app.styles.ts  app.ts  auth.ts  chat-event-reducer.test.ts  chat-event-reducer.ts  chat-models.ts  citations.test.ts  citations.ts  client.ts  converters.test.ts  converters.ts  ui-logger.ts
frontend/src/a2ui/: processor.ts  surface-renderer.ts  types.ts
frontend/src/components/: chat-composer.styles.ts  chat-composer.ts  chat-transcript.styles.ts  chat-transcript.ts  conversation-sidebar.ts  light-dom-element.ts  memory-profile.styles.ts  memory-rail.ts  profile-drawer.ts
frontend/src/styles/: base.styles.ts  navigation.styles.ts  responsive.styles.ts
frontend/src/templates/: rag-citations.ts  shipping-status.ts
infra/: compute.tf  data.tf  directive_data.tf  directive_ingestion_job.tf  foundry.tf  foundry_agents.tf  identity.tf  jobs.tf  main.tf  monitoring.tf  network.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: assign_hosted_agent_access.sh  build_hosted_agent_image.sh  create_entra_app.sh  deploy_directive_ingestion.sh  deploy_images.sh  release_foundry_assets.sh
setup/agents/: release_prompt_agent.py  requirements.txt
setup/directive_ingest/: Dockerfile  pyproject.toml
setup/directive_ingest/src/directive_ingestion/: __init__.py  blob_repository.py  canonical.py  catalog_repository.py  chunking.py  cli.py  clients.py  config.py  document_intelligence.py  mandate_projection.py  reconcile.py  search_repository.py  source.py  summaries.py
setup/directive_ingest/tests/: test_failure_boundaries.py  test_ingestion_contracts.py  test_preflight.py  test_search_schema.py
setup/directives/mandatory/: mand.csv
setup/directives/md/: 30336958-company-car-driver-safety-requirements-v1.md  36269153-company-internal-canteen-policy-v1.md  36269153-company-internal-canteen-policy-v2.md  72403881-company-car-policy-v1.md  72403881-company-car-policy-v2.md  95315332-company-vacation-policy-v1.md  95315332-company-vacation-policy-v2.md
setup/knowledgebase/: Dockerfile  requirements.txt  setup_search.py
setup/knowledgebase/documents/orders/: ord-001.json  ord-002.json  ord-003.json
setup/knowledgebase/documents/policies/: return-policy.json
setup/postgres/: Dockerfile  bootstrap.py  requirements.txt
