[project]
name = "agent-memory-rag-contracts"
version = "0.1.0"
description = "Shared contracts for the project's Foundry agent runtimes"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
]

[tool.setuptools]
packages = ["agent_contracts"]
package-dir = { agent_contracts = "." }

[tool.setuptools.package-data]
agent_contracts = ["customer_support.txt", "foundry_prompt.txt"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
