[project]
name = "agentic-memory-backend"
version = "0.1.0"
description = "Agentic AI Memory backend (Challenges 1-5) — vertical slice P0-P2"
requires-python = ">=3.11"
dependencies = [
  # --- Runtime deps needed for the offline vertical slice (P0-P2) ---
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "ag-ui-protocol>=0.1.19",     # AG-UI events + EventEncoder (SSE frames, see B4)
  "jinja2>=3.1.0",              # prompt templates
  "python-dotenv>=1.2.1",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
# The full solution (later phases) additionally needs these. `agent-framework-ag-ui`
# is a private/beta build NOT on public PyPI — it is imported lazily and guarded so the
# offline slice runs without it. Install from your own registry when wiring the real agent.
azure = [
  "aiohttp>=3.9.0",
  "asyncpg>=0.30.0",
  "azure-cosmos>=4.9.0",
  "azure-identity>=1.26.0b1",
  "openai>=1.40.0",
  "pyjwt[crypto]>=2.10.1",
  "httpx>=0.27.0",
  # "agent-framework-ag-ui>=1.0.0b260304",  # from private registry
]

[tool.setuptools]
py-modules = [
  "server",
  "auth",
  "session_manager",
  "agent_tools",
  "agent_runner",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
