[project]
name = "agentic-memory-backend"
version = "0.1.0"
description = "FastAPI trust boundary for the dual-Foundry agent memory application"
requires-python = ">=3.11"
dependencies = [
  # --- Core runtime (offline slice + deployed) ---
  "agent-memory-rag-contracts==0.1.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "ag-ui-protocol>=0.1.19",     # AG-UI events + EventEncoder (SSE frames, see B4)
  "python-dotenv>=1.2.1",
  "pydantic>=2.7.0",
  # --- Azure stores + LLM ---
  "aiohttp>=3.9.0",
  "azure-cosmos>=4.9.0",
  "azure-ai-projects==2.3.0",
  "azure-identity>=1.19.0",
  "azure-monitor-opentelemetry>=1.6.0",
  "openai>=1.40.0",
  "httpx>=0.27.0",
  "pyjwt[crypto]>=2.10.1",
]

[tool.uv.sources]
agent-memory-rag-contracts = { path = "../agent_contracts", editable = true }

[tool.setuptools.packages.find]
include = ["agent_memory_backend*"]

[tool.setuptools.package-data]
agent_memory_backend = ["prompts/*.txt"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
